[package]
name = "slay-assistant"
version = "0.3.0"
edition = "2021"
description = "AI-powered assistant for Slay the Spire 2"

[dependencies]
# HTTP client
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Global hotkeys (Windows)
win-hotkeys = "0.5"

# Overlay UI (Phase 3)
eframe = { version = "0.31", default-features = false, features = ["default_fonts", "glow"] }
egui = "0.31"
winit = "0.30"
parking_lot = "0.12"

# Error handling
anyhow = "1"

# Config
toml = "0.8"

# Logging
log = "0.4"
env_logger = "0.11"


