[project]
name = "yuketang-auto"
version = "0.8.6"
description = "雨课堂智·汇大讲堂直播回放本地助手（非官方，仅自用）"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "playwright>=1.40.0",
  "PyYAML>=6.0",
  "Flask>=3.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "ruff>=0.4"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]
